--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDoList</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="todo-container">
-        <h1>test</h1>
-        <div class="flex-wrapper">
-            <div class="add-todo-wrapper">
-                <div class="input-wrapper">
-                    <input type="text" id="description-task" autofocus>
-                </div>
-                <div class="button-wrapper">
-                    <button id="add-task-btn">Add</button>
-                </div>
-            </div>
-            <h2>test_2</h2>
-            <div class="todos-wrapper">
-                
-            </div>
+      <h1>test</h1>
+      <div class="flex-wrapper">
+        <div class="add-todo-wrapper">
+          <div class="input-wrapper">
+            <input type="text" id="description-task" autofocus />
+          </div>
+          <div class="button-wrapper">
+            <button id="add-task-btn">Add</button>
+          </div>
         </div>
+        <h2>test_2</h2>
+        <div class="todos-wrapper"></div>
+      </div>
     </div>
-    
+
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
